--- a/package.json
+++ b/package.json
@@ -8,13 +8,21 @@
     "dev": "nodemon server.js",
     "deploy": "GIT_ENABLED=true node server.js",
     "build": "echo 'No build step needed'",
-    "vercel-build": "echo 'Vercel build complete'"
+    "vercel-build": "echo 'Vercel build complete'",
+    "test": "node test-cms.js",
+    "test:full": "node tests/run-tests.js",
+    "test:api": "node tests/api-tests.js",
+    "test:ui": "node tests/ui-tests.js",
+    "test:watch": "nodemon test-cms.js"
   },
   "dependencies": {
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "puppeteer": "^21.0.0",
+    "chai": "^4.3.8",
+    "mocha": "^10.2.0"
   },
   "engines": {
     "node": ">=14.0.0"
