--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,9 @@
 {
-  "functions": {
-    "api/auth.js": {
-      "maxDuration": 10
-    },
-    "api/content.js": {
-      "maxDuration": 15
-    },
-    "api/github-publish.js": {
-      "maxDuration": 30
+  "version": 2,
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/api/index"
     }
-  }
+  ]
 }
