--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "deploy": "GIT_ENABLED=true node server.js",
-    "build": "mkdir -p public && cp *.html *.js *.png *.jpeg *.json *.txt *.xml public/ 2>/dev/null || true",
-    "vercel-build": "rm -rf public && mkdir -p public && cp *.html *.js *.png *.jpeg *.json *.txt *.xml public/ 2>/dev/null || true && echo 'Build completed: public directory created'",
+    "build": "mkdir -p public && cp *.html *.js *.png *.jpeg *.json *.txt *.xml public/ 2>/dev/null || true && cp -R uploads public/uploads 2>/dev/null || true",
+    "vercel-build": "rm -rf public && mkdir -p public && cp *.html *.js *.png *.jpeg *.json *.txt *.xml public/ 2>/dev/null || true && cp -R uploads public/uploads 2>/dev/null || true && echo 'Build completed: public directory created'",
     "test": "node test-cms.js",
     "test:full": "node tests/run-tests.js",
     "test:api": "node tests/api-tests.js",
