Update Vercel configuration with build command and output directory

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,7 @@
 {
   "version": 2,
+  "buildCommand": "npm run vercel-build",
+  "outputDirectory": "public",
   "cleanUrls": true,
-  "trailingSlash": false,
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    }
-  ]
+  "trailingSlash": false
 }
