--- a/package.json
+++ b/package.json
@@ -18,14 +18,8 @@
   "dependencies": {
     "express": "^4.18.2"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.1",
-    "puppeteer": "^21.0.0",
-    "chai": "^4.3.8",
-    "mocha": "^10.2.0"
-  },
   "engines": {
-    "node": ">=14.0.0"
+    "node": "18.x"
   },
   "author": "Sybilla Sedlar",
   "license": "private"
