Refactor image upload functionality and enhance SEO with updated metadata and sitemap

--- a/public/package.json
+++ b/public/package.json
@@ -7,8 +7,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "deploy": "GIT_ENABLED=true node server.js",
-    "build": "mkdir -p public && cp *.html *.js *.png *.jpeg *.json *.txt *.xml public/ 2>/dev/null || true",
-    "vercel-build": "rm -rf public && mkdir -p public && cp *.html *.js *.png *.jpeg *.json *.txt *.xml public/ 2>/dev/null || true && echo 'Build completed: public directory created'",
+    "build": "mkdir -p public && cp *.html *.js *.png *.jpeg *.json *.txt *.xml public/ 2>/dev/null || true && cp -R uploads public/uploads 2>/dev/null || true",
+    "vercel-build": "rm -rf public && mkdir -p public && cp *.html *.js *.png *.jpeg *.json *.txt *.xml public/ 2>/dev/null || true && cp -R uploads public/uploads 2>/dev/null || true && echo 'Build completed: public directory created'",
     "test": "node test-cms.js",
     "test:full": "node tests/run-tests.js",
     "test:api": "node tests/api-tests.js",
@@ -18,14 +18,8 @@
   "dependencies": {
     "express": "^4.18.2"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.1",
-    "puppeteer": "^21.0.0",
-    "chai": "^4.3.8",
-    "mocha": "^10.2.0"
-  },
   "engines": {
-    "node": ">=14.0.0"
+    "node": "22.x"
   },
   "author": "Sybilla Sedlar",
   "license": "private"
